fixed footer cart and about ans stay and tought for responsive

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,6 +34,8 @@
         }
         .wrap-footer {
             width: 100%;
+            background-color: #f2fdff;
+            margin: 0 auto;
         }
     }
 
@@ -130,6 +132,8 @@
         }
         .wrap-footer {
             width: 100%;
+            background-color: #f2fdff;
+            margin: 0 auto;
         }
     }
 
@@ -140,6 +144,8 @@
         }
         .wrap-footer {
             width: 100%;
+            background-color: #f2fdff;
+            margin: 0 auto;
         }
     }
 
