--- a/css/style.css
+++ b/css/style.css
@@ -943,7 +943,6 @@ h2 {
     height: 120px;
    }
 .menu_futer {
-    height: 50px;
     width: 100%;
 }
 .menu_futer hr {
@@ -951,8 +950,15 @@ h2 {
     color: #555963;
     position: relative;
 }
-.menu_futer ul li  {
-    margin: 20px 20px;
+.menu_futer {
+    height: 50px;
+    border-bottom: 1px solid #959ba1;
+    padding-bottom: 20px;
+}
+
+.menu_futer ul li {
+     padding: 20px 50px 20px 0;
+    /*border-bottom: solid #959ba1 1px;*/
 }
 .menu_futer a {
     font-family: 'Lato', sans-serif;
@@ -963,49 +969,48 @@ h2 {
 }
 .footer_content {
     width: 100%;
+    padding-top: 115px;
 }
 .footer_section_about {
-    width: 65%;
+    width: 100%;
     float: left;
 }
 .footer_section_active {
-    margin: 95px 0 0 0;
-    width: 28%;
+    width: 30%;
     float: right;
-    position: relative;
+
 }
+
 .footer_section_active input {
 background-color: #f2fdff;;
 }
 
-.footer_section_active form {
-
-}
-.footer_section_active hr {
-    display: block;
-    color: #555963;
-}
-
 .section_about_header {
-    width: 73%;
-    margin: 95px 0 0 0;
+    width: 55%;
+    float: left;
+}
+.section_about_header h2 {
+    padding-bottom: 37px;
 }
 
 .section_about_header p {
-    margin: 35px 0 0 0;
+    padding-bottom: 20px;
+
     font-family: 'Yrsa', serif;
     color: #555963;
     font-size: 19px;
     line-height: 26px;
 }
 .footer_section_box {
-    width: 100%;
-    height: 40px;
+    width: 70%;
+    float: left;
     margin: 40px 0 0 0;
 }
 .section_box {
-    float: left;
+    display: inline-block;
     width: 25%;
+    vertical-align: top;
+    margin-bottom: 25px;
 }
 
 .section_box p {
@@ -1014,44 +1019,43 @@ background-color: #f2fdff;;
     line-height: 26px;
     color: #4f6569;
 }
-.footer_section_inner_box {
-    margin: 45px 0 0 0;
-}
+/*.footer_section_inner_box {*/
+    /*margin: 45px 0 0 0;*/
+    /*width: 70%;*/
+/*}*/
 .footer_info {
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     color: #555963;
-    margin: 150px 0 0 0;
 }
 
 /*button[type=submit]:hover {
     border: none;
 }
 */
-.subscribe_form {
-    width: auto;
-    height: 50px;
+.subscribe-form {
     border-bottom: 1px solid rgb(69, 70, 74);
+    padding-top: 25px;
 }
-.subscribe_form input {
+.subscribe-form input {
     background-color: #f2fdff;
     box-sizing: border-box;
     font-size: 16px;
     font-family: 'Lato', sans-serif;
-    color: #45474b;
+    color: #da8913;
     border: none;
 }
-.subscribe_form input:focus {
+.subscribe-form input:focus {
     outline: none;
 }
-.subscribe_button::before {
+.subscribe-button::before {
     content: "";
     width: 1px;
     height: 15px;
     background: #555963;
     display: inline-block;
-    margin: 0 20px;
     vertical-align: middle;
+    margin-right: 15px;
 }
 
 .input-text input {
@@ -1086,19 +1090,59 @@ background-color: #f2fdff;;
 }
 
 
-.subscribe_button{
+.subscribe-button{
+    padding-top: 10px;
+    float: right;
     background-color: #f2fdff;
     color: #555963;
-    padding: 10px 0px;
-    margin: 8px 0;
     border: none;
     cursor: pointer;
 }
-.subscribe_button:focus {
+@media all and (max-width: 980px) {
+    .footer_section_about {
+        /*width: 70%;*/
+    }
+    .footer_section_active {
+
+        /*width: 29%;*/
+    }
+    .subscribe-button {
+        /*float: none;
+        border-top: 1px solid rgb(69, 70, 74); */
+    }
+    .subscribe-form {
+       /* border-bottom: none; */
+
+    }
+
+}
+@media all and (max-width: 955px) {
+    .footer_section_active {
+       width: 30%;
+    }
+}
+@media all and (max-width: 910px){
+    .subscribe-form input {
+        width: 90px;
+    }
+}
+
+@media all and (min-width: 720px) and (max-width: 910px) {
+    .subscribe-form input {
+        width: 90px;
+    }
+}
+@media all and (min-width: 640px) and (max-width: 720px) {
+    .social_icon ul li a {
+        padding: 25px 34px 0 0;
+    }
+}
+
+    .subscribe-button:focus {
     outline: none;
 }
 
-.subscribe_button::after {
+.subscribe-button::after {
     background-repeat: no-repeat;
     content: "";
     margin-left: 5px;
@@ -1114,7 +1158,9 @@ background-color: #f2fdff;;
     list-style-type: none;
 }
 .footer_social {
-    margin: 80px 0 0 0;
+    float: right;
+    width: 30%;
+    padding-top: 40px;
 }
 
 .checkbox-design input {
@@ -1396,7 +1442,6 @@ background-color: #f2fdff;;
 
 .coupon_button {
     background-color: white;
-    padding: 10px 0 0 63px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
@@ -1774,11 +1819,6 @@ background-color: #f2fdff;;
     border: none;
     background-color: white;
 }
-/*.hr-form {
-    margin-top: 30px;
-    border-bottom: 1px solid #bfbfbf;
-    width: 76%;
-} */
 
 .inner-login-social {
     padding-top: 15px;
