--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,63 +10,95 @@
         .form-cart {
             padding-top: 2px;
         }
-        /*.shipping-inner {*/
-           /*float: left;*/
-        /*}*/
+
     }
 
     @media all and (min-width: 320px) and (max-width: 1190px) {
-        .shipping_left h3 {
-            height: 50px;
-        }
         .menu_list {
             display: none;
         }
 
-    @media all and (min-width: 768px) and (max-width: 992px) {
-        .proceed-wrap {
-            width: 40%;
+        @media all and (min-width: 768px) and (max-width: 992px) {
+            .proceed-wrap {
+                width: 40%;
+            }
+
         }
 
-    }
+        @media all and (min-width: 480px) and (max-width: 768px) {
+            .rightpart {
+                float: none;
+            }
 
-    @media all and (min-width: 480px) and (max-width: 768px) {
-        .rightpart {
-            float: none;
+            .leftpart {
+                float: none;
+            }
+
+
+            .payment-method {
+                padding: 65px 100px 0 100px;
+            }
+
+        }
+        @media all and (min-width: 480px) and (max-width: 680px){
+            .shipping_left {
+                float: none;
+            }
+            .shipping_right {
+                float: none;
+                padding-top: 32px;
+            }
+            .create_account {
+                text-align: left;
+                width: 100%;
+            }
+            .coupon-form {
+                float: none;
+                padding-bottom: 133px;
+                width: 100%;
+            }
+            .proceed-wrap {
+                float: none;
+            }
         }
 
-        .leftpart {
-            float: none;
+        @media all and (min-width: 680px) and (max-width: 768px){
+            .shipping_left {
+                float: none;
+            }
+
+            .shipping_right {
+                float: none;
+            }
         }
 
-        .shipping_left {
-            float: none;
+        @media all and (min-width: 640px) and (max-width: 680px){
+            .shipping_left {
+                float: none;
+            }
+
+            .shipping_right {
+                float: none;
+            }
         }
 
-        .shipping_right {
-            float: none;
-        }
-
-        .payment-method {
-            padding: 65px 100px 0 100px;
-        }
-
-    }
-
-        @media all and (max-width: 1024px){
+        @media all and (max-width: 1024px) {
 
             .presentation_book {
                 float: none;
                 width: auto;
                 margin-bottom: 50px;
             }
+
             .presentation_text {
                 border: 1px solid grey;
                 width: auto;
             }
-            .form-cart {
-               width: calc(100%-10px);
-            }
+
+            /*.form-cart {*/
+                /*width: calc(100% - 10px);*/
+            /*}*/
+
             .wrap-footer {
                 width: 100%;
                 background-color: #f2fdff;
@@ -75,10 +107,11 @@
         }
 
 
-        @media all and (min-width: 910px) and (max-width: 1045px){
+        @media all and (min-width: 910px) and (max-width: 1045px) {
             .shipping-inner {
-               float: none;
+                float: none;
             }
+
             .shipping_left h3 {
                 height: 50px;
             }
@@ -91,83 +124,100 @@
                 float: none;
                 margin: 0 auto;
             }
+
             .booktext {
                 margin: 0 auto;
                 height: 355px;
                 float: none;
                 width: 500px;
             }
+
             .presentation_books {
                 margin-top: 500px;
             }
+
             .presentation_book_img {
                 right: -100px;
             }
-            .coupon-form {
-                float: left;
-                width: 33%;
-            }
+
+            /*.coupon-form {*/
+                /*float: left;*/
+                /*width: 34%;*/
+            /*}*/
         }
 
-        @media all and (max-width: 600px){
+        @media all and (max-width: 600px) {
             .presentation_book {
                 background-color: #da8913;
             }
+
             .form-cart {
                 padding-top: 2px;
             }
 
         }
-        @media all and (max-width: 658px){
+        @media all and (max-width: 658px) {
 
             .cart-wrap {
                 margin-top: 280px;
             }
+
             .coupon-code input {
                 width: 120px;
             }
+
             .coupon-code {
                 width: 233px;
             }
+
             button.btn {
                 padding: 5px 5px;
             }
+
             span.proceed-count-font1 {
                 font-size: 18px;
             }
+
             span.proceed-count-font2 {
                 font-size: 21px;
             }
+
             span.proceed-count-font3 {
                 font-size: 25px;
             }
+
             span.proceed-count-font4 {
                 font-size: 28px;
             }
+
             .proceed-payment {
                 float: none;
             }
         }
 
-        @media all and (max-width: 600px) and (orientation: landscape){
+        @media all and (max-width: 600px) and (orientation: landscape) {
             .presentation_book {
                 background-color: chocolate;
             }
         }
 
         @media only screen and (max-width: 768px) {
-            .form-cart {
-                padding-top: 2px;
-            }
+            /*.form-cart {*/
+                /*padding-top: 2px;*/
+            /*}*/
+
             .button.btn {
                 padding: 10px 10px;
             }
+
             .coupon-code {
-             width: 277px;
+                width: 277px;
             }
+
             .coupon-code input {
                 width: 120px;
             }
+
             .wrap-footer {
                 width: 100%;
                 background-color: #f2fdff;
@@ -176,95 +226,91 @@
         }
 
         /* больше чем 768px */
-    @media only screen and (min-width: 1280px) {
-        .menu_list {
-            margin-left: 80px;
-        }
-        .wrap-footer {
-            width: 100%;
-            background-color: #f2fdff;
-            margin: 0 auto;
-        }
-    }
+        @media only screen and (min-width: 1280px) {
+            .menu_list {
+                margin-left: 80px;
+            }
 
-    @media
-    only screen and (max-width: 760px),
-    (min-device-width: 768px) and (max-device-width: 1024px)  {
-
-        /* Force table to not be like tables anymore */
-        table, thead, tbody, th, td, tr {
-            display: block;
+            .wrap-footer {
+                width: 100%;
+                background-color: #f2fdff;
+                margin: 0 auto;
+            }
         }
 
-        /* Hide table headers (but not display: none;, for accessibility) */
-        .table-header {
-            position: absolute;
-            top: -9999px;
-            left: -9999px;
+        /*@media*/
+        /*only screen and (max-width: 760px),*/
+        /*(min-device-width: 768px) and (max-device-width: 1024px)  {*/
+        /*!* Force table to not be like tables anymore *!*/
+        /*!*table, thead, tbody, th, td, tr {*!*/
+        /*!*display: block;*!*/
+        /*!*}*!*/
+        /*!* Hide table headers (but not display: none;, for accessibility) *!*/
+        /*!*.table-header {*!*/
+        /*!*position: absolute;*!*/
+        /*!*top: -9999px;*!*/
+        /*!*left: -9999px;*!*/
+        /*!*}*!*/
+        /*!*td {*!*/
+        /*!*!* Behave  like a "row" *!*!*/
+        /*!*position: relative;*!*/
+        /*!*padding-left: 50%;*!*/
+        /*!*}*!*/
+        /*!*td:before {*!*/
+        /*!*!* Now like a table header *!*!*/
+        /*!*position: absolute;*!*/
+        /*!*!* Top/left values mimic padding *!*!*/
+        /*!*top: 6px;*!*/
+        /*!*left: 6px;*!*/
+        /*!*width: 45%;*!*/
+        /*!*padding-right: 10px;*!*/
+        /*!*white-space: nowrap;*!*/
+        /*!*}*!*/
+        /*}*/
+        /* при меньше 500px ) */
+        @media only screen and (max-width: 500px) {
+
         }
 
-        td {
-            /* Behave  like a "row" */
-            position: relative;
-            padding-left: 50%;
+        /* For width 400px and larger: */
+        @media only screen and (min-width: 400px) {
+
         }
 
-        td:before {
-            /* Now like a table header */
-            position: absolute;
-            /* Top/left values mimic padding */
-            top: 6px;
-            left: 6px;
-            width: 45%;
-            padding-right: 10px;
-            white-space: nowrap;
+        /* For devices 400px and larger: */
+        @media only screen and (min-device-width: 400px) {
         }
 
+        /*@media screen and (max-width: 30em) {*/
+            /*div.cs-skin-elastic {*/
+                /*font-size: 1em;*/
+            /*}*/
+        /*}*/
 
-    }
+        /*.cs-skin-country > span {*/
+            /*color: #959ba1;*/
+            /*font-family: 'Lato', sans-serif;*/
+            /*font-size: 16px;*/
+            /*background-color: #fff;*/
+            /*z-index: 100;*/
+        /*}*/
 
-    /* при меньше 500px ) */
-    @media only screen and (max-width: 500px) {
+        /*.cs-skin-country > span::after {*/
+            /*font-family: 'Lato', sans-serif;*/
+            /*font-size: 16px;*/
+            /*content: '';*/
+            /*background-image: url("../img/shape19.png");*/
+            /*width: 14px;*/
+            /*height: 8px;*/
+            /*-webkit-backface-visibility: hidden;*/
+            /*backface-visibility: hidden;*/
+        /*}*/
 
-    }
-
-    /* For width 400px and larger: */
-    @media only screen and (min-width: 400px) {
-
-    }
-
-    /* For devices 400px and larger: */
-    @media only screen and (min-device-width: 400px) {
-    }
-
-    @media screen and (max-width: 30em) {
-        div.cs-skin-elastic { font-size: 1em; }
-    }
-
-    .cs-skin-country > span {
-        color: #959ba1;
-        font-family: 'Lato', sans-serif;
-        font-size: 16px;
-        background-color: #fff;
-        z-index: 100;
-    }
-
-    .cs-skin-country > span::after {
-        font-family: 'Lato', sans-serif;
-        font-size: 16px;
-        content: '';
-        background-image: url("../img/shape19.png");
-        width: 14px;
-        height: 8px;
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-    }
-
-    .cs-skin-country .cs-options {
-        overflow: visible;
-        background: transparent;
-        opacity: 1;
-        visibility: visible;
-        padding-bottom: 1.25em;
-    }
+        /*.cs-skin-country .cs-options {*/
+            /*overflow: visible;*/
+            /*background: transparent;*/
+            /*opacity: 1;*/
+            /*visibility: visible;*/
+            /*padding-bottom: 1.25em;*/
+        /*}*/
 
