--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,6 +82,63 @@
             }
         }
 
+        @media all and (min-width: 480px) and (max-width: 768px) {
+            .footer_section_active {
+                float: none;
+            }
+            .section_about_header {
+                float: none;
+            }
+            .coupon-form {
+                float: none;
+                padding-bottom: 120px;
+            }
+            .proceed-wrap {
+                float: none;
+            }
+            .footer_section_box {
+                float: none;
+                width: 80%;
+                padding: 22px 132px;
+            }
+            .footer_social {
+                float: none;
+            }
+        }
+        @media all and (min-width: 610px) and (max-width: 768px) {
+        .footer_section_active {
+            float: none;
+            width: 45%;
+        }
+    }
+        @media all and (min-width: 480px) and (max-width: 610px) {
+            .footer_section_active {
+                float: none;
+                width: 57%;
+            }
+
+            .menu_futer ul li {
+                padding: 20px 15px 20px 0;
+            }
+        }
+
+            /*.subscribe-button {*/
+                /*float: left;*/
+                /*padding: 0;*/
+            /*}*/
+            /*.subscribe-form {*/
+                /*border-bottom: none;*/
+            /*}*/
+            /*.subscribe-form input {*/
+                /*padding-bottom: 2px;*/
+                /*border-bottom: 1px solid #45474b;*/
+            /*}*/
+
+        @media all and (min-width: 320px) and (max-width: 480px) {
+
+    }
+
+
         @media all and (max-width: 1024px) {
 
             .presentation_book {
