--- a/css/responsive.css
+++ b/css/responsive.css
@@ -135,7 +135,45 @@
             /*}*/
 
         @media all and (min-width: 320px) and (max-width: 480px) {
+            .rightpart {
+                float: none;
+            }
 
+            .leftpart {
+                float: none;
+            }
+            .shipping_left {
+                float: none;
+            }
+            .shipping_right {
+                float: none;
+                padding-top: 70px;
+                width: 100%;
+            }
+            .coupon-form {
+                float: none;
+                padding-bottom: 120px;
+            }
+            .proceed-wrap {
+                float: none;
+            }
+            .menu_futer ul li {
+                padding: 20px 15px 20px 0;
+            }
+            .section_about_header {
+                float: none;
+            }
+            .footer_section_active {
+                float: none;
+                width: 57%;}
+            .footer_section_box {
+                float: none;
+                text-align: center;
+                width: 100%;
+            }
+            .footer_social {
+                float: none;
+            }
     }
 
 
