--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ a:focus {
 }
 
 .container_button a {
-    transition: 5s ease color;
+    transition: 1s ease color;
 }
 .btn:hover {
     background: #da8913;
@@ -380,28 +380,43 @@ a:focus {
     padding: 90px 0 0 0;
 }
 .shopfrontmenuleft ul li a {
-     list-style-type: none;
-     color: #d3d9db;
-     padding: 10px 10px 10px 10px;
+    list-style-type: none;
+    color: #d3d9db;
+    margin: 0 10px;
+    padding-bottom: 10px;
 
  }
-.shopfrontmenuleft ul li a:hover::after {
-    content: "";
-    width: 30px;
-    height: 2px;
-    display: block;
-    margin-top: 5px;
-    background: #ececed;
-    transition: color 0.5s ease ;
+.shopfrontmenuleft ul li :hover {
+   border-bottom: 1px solid #45474b;
+   color: #45474b;
+   transition: color 0.5s ease ;
+    padding-bottom: 17px;
+
 }
 .shopfrontmenuleft {
     float: left;
+    border-bottom: 1px solid #d3d9db;
+    padding-bottom: 10px;
 
 }
 .shopfrontmenuright {
+    padding-bottom: 10px;
     float: right;
-    color: #45474b;
+
 }
+.shopfrontmenuright ul li a {
+    float: right;
+    color: #d3d9db;
+    padding-bottom: 10px;
+}
+.shopfrontmenuright ul li:hover {
+    border-bottom: 1px solid #45474b;
+    color: #45474b;
+    transition: color 0.5s ease ;
+    /*padding-bottom: 10px;*/
+
+}
+
 
 .container .button {
     float: left;
@@ -537,11 +552,16 @@ a:focus {
     padding: 45px 15px 10px 0;
 }
 .bookmark {
+    top: 222px;
+    right: 85px;
     position: absolute;
     font-family: "Work Sans";
     font-weight: bold;
     font-size: 17px;
     color: #555963;
+}
+.inner-bookmark {
+    position: relative;
 }
 
 .fontcaption {
@@ -754,9 +774,11 @@ h2 {
     color: #555963;
 }
 .writer_page {
+    border-bottom: 1px solid #45474b;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     line-height: 29px;
+    padding-bottom: 10px;
 }
 .fontcaption_text {
     font-family: 'PT Serif', serif;
@@ -871,15 +893,9 @@ h2 {
     position: relative;
     width: 200px;
     display: inline-block;
-    padding: 0 40px 0 40px;
+    padding: 0 37px 0 40px;
 }
 
-.popular_book img {
-
-}
-.popular_book_img {
-
-}
 .popular-book-text {
     margin-top: 282px;
 }
@@ -1072,16 +1088,7 @@ background-color: #f2fdff;;
     cursor: pointer;
 }
 
-@media all and (min-width: 720px) and (max-width: 910px) {
-    .subscribe-form input {
-        width: 90px;
-    }
-}
-@media all and (min-width: 640px) and (max-width: 720px) {
-    .social_icon ul li a {
-        padding: 25px 34px 0 0;
-    }
-}
+
 
     .subscribe-button:focus {
     outline: none;
@@ -1658,15 +1665,16 @@ background-color: #f2fdff;;
     width: 100%;
     height: 500px;
 }
-#slider {
-    margin-top: 50px;
+.slider-header-book {
+    padding-bottom: 300px;
 }
+/*#slider {*/
+    /*margin-top: 50px;*/
+/*}*/
 #slider-popular {
     margin-top: 50px;
 }
-.arrow-left {
 
-}
 /*  ----    */
 /*.slide-picture + img {
     opacity: 0;
@@ -1689,8 +1697,9 @@ background-color: #f2fdff;;
 }
 
 .inner-slide {
-    width: 100%;
-    position: absolute;
+    margin-bottom: 80px;
+    /*width: 100%;*/
+    /*position: absolute;*/
 }
 
 .slide-picture:checked + img {
@@ -1729,6 +1738,8 @@ background-color: #f2fdff;;
 }
 .sign-in input:hover {
     background-color: #da8913;
+    color: white;
+    transition: color 0.5s ease;
 }
 
 .sign-in {
@@ -2125,39 +2136,142 @@ div.cs-skin-country {
     content: '';
 }
 
+/*slider-header-book*/
 
-/*@-webkit-keyframes expand {
-    0% { -webkit-transform: scale3d(1,0,1); }
-    25% { -webkit-transform: scale3d(1,1.2,1); }
-    50% { -webkit-transform: scale3d(1,0.85,1); }
-    75% { -webkit-transform: scale3d(1,1.05,1) }
-    100% { -webkit-transform: scale3d(1,1,1); }
+/*#slider { !*положение слайдера*!*/
+    /*position: relative;*/
+    /*!*text-align: center;*!*/
+    /*top: 10px;*/
+/*}*/
+
+/*#slider{ !*центровка слайдера*!*/
+    /*margin: 0 auto;*/
+/*}*/
+
+#slides article{ /*все изображения справа друг от доруга*/
+    width: 20%;
+    float: left;
 }
 
-@keyframes expand {
-    0% { -webkit-transform: scale3d(1,0,1); transform: scale3d(1,0,1); }
-    25% { -webkit-transform: scale3d(1,1.2,1); transform: scale3d(1,1.2,1); }
-    50% { -webkit-transform: scale3d(1,0.85,1); transform: scale3d(1,0.85,1); }
-    75% { -webkit-transform: scale3d(1,1.05,1); transform: scale3d(1,1.05,1); }
-    100% { -webkit-transform: scale3d(1,1,1); transform: scale3d(1,1,1); }
+#slides .image{ /*устанавливает общий размер блока с изображениями*/
+    width: 500%;
+    /*line-height: 0;*/
 }
 
-
-@-webkit-keyframes bounce {
-    0% { -webkit-transform: translate3d(0,-25px,0); opacity:0; }
-    25% { -webkit-transform: translate3d(0,10px,0); }
-    50% { -webkit-transform: translate3d(0,-6px,0); }
-    75% { -webkit-transform: translate3d(0,2px,0); }
-    100% { -webkit-transform: translate3d(0,0,0); opacity: 1; }
+#overflow{ /*сркывает все, что находится за пределами этого блока*/
+    width: 100%;
+    overflow: hidden;
 }
 
-@keyframes bounce {
-    0% { -webkit-transform: translate3d(0,-25px,0); transform: translate3d(0,-25px,0); opacity:0; }
-    25% { -webkit-transform: translate3d(0,10px,0); transform: translate3d(0,10px,0); }
-    50% { -webkit-transform: translate3d(0,-6px,0); transform: translate3d(0,-6px,0); }
-    75% { -webkit-transform: translate3d(0,2px,0); transform: translate3d(0,2px,0); }
-    100% { -webkit-transform: translate3d(0,0,0); transform: translate3d(0,0,0); opacity: 1; }
-} */
-/* --------    */
+/*article img{ !*размер изображений слайдера*!*/
+/*width: 100%;*/
+/*}*/
 
+#desktop:checked ~ #slider{ /*размер всего слайдера*/
+    max-width: 1160px; /*максимальнная длинна*/
+}
+
+/*настройка переключения и положения для левой стрелки*/
+/*если свич1-5 активны, то идет обращение к лейблу из блока с id контролс*/
+#switch1:checked ~ #controls label:nth-child(5),
+#switch2:checked ~ #controls label:nth-child(1),
+#switch3:checked ~ #controls label:nth-child(2),
+#switch4:checked ~ #controls label:nth-child(3),
+#switch5:checked ~ #controls label:nth-child(4){
+    background: url('../img/icons_svg/arrow-left.svg') no-repeat; /*заливка фона картинкой без повторений*/
+    float: left;
+    margin: -289px 0 0 41px; /*сдвиг влево*/
+    display: block;
+    height: 68px;
+    width: 68px;
+}
+
+/*настройка переключения и положения для правой стрелки*/
+#switch1:checked ~ #controls label:nth-child(2),
+#switch2:checked ~ #controls label:nth-child(3),
+#switch3:checked ~ #controls label:nth-child(4),
+#switch4:checked ~ #controls label:nth-child(5),
+#switch5:checked ~ #controls label:nth-child(1){
+    background: url('../img/icons_svg/arrow-right.svg') no-repeat; /*заливка фона картинкой без повторений*/
+    float: right;
+    margin: -198px -60px 0 0; /*сдвиг вправо*/
+    display: block;
+    height: 68px;
+    width: 68px;
+}
+
+label, a{ /*при наведении на стрелки или переключатели - курсор изменится*/
+    cursor: pointer;
+}
+
+.slider-header-book input{ /*скрывает стандартные инпуты (чекбоксы) на странице*/
+    display: none;
+}
+
+/*позиция изображения при активации переключателя*/
+#switch1:checked ~ #slides .image{
+    margin-left: 0;
+}
+
+#switch2:checked ~ #slides .image{
+    margin-left: -100%;
+}
+
+#switch3:checked ~ #slides .image{
+    margin-left: -200%;
+}
+
+#switch4:checked ~ #slides .image{
+    margin-left: -300%;
+}
+
+#switch5:checked ~ #slides .image{
+    margin-left: -400%;
+}
+
+#controls{ /*положение блока всех управляющих элементов*/
+    margin: -25% 0 0 0;
+    width: 100%;
+    height: 50px;
+}
+
+#active label{ /*стиль отдельного переключателя*/
+    border-radius: 10px; /*скругление углов*/
+    display: inline-block; /*расположение в строку*/
+    width: 15px;
+    height: 15px;
+    background: #bbb;
+}
+
+#active{ /*расположение блока с переключателями*/
+    margin: 16% 0 0;
+    text-align: center;
+}
+
+#active label:hover{ /*поведение чекбокса при наведении*/
+    background: #959ba1;
+    border-color: #45474b ; /*выполнение в любом случае*/
+}
+
+/*цвет активного лейбла при активации чекбокса*/
+#switch1:checked ~ #active label:nth-child(1),
+#switch2:checked ~ #active label:nth-child(2),
+#switch3:checked ~ #active label:nth-child(3),
+#switch4:checked ~ #active label:nth-child(4),
+#switch5:checked ~ #active label:nth-child(5){
+    background: #da8913;
+    border-color: #da8913 ;
+}
+
+#slides .image{ /*анимация пролистывания изображений*/
+    transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+}
+
+#controls label:hover{ /*прозрачность стрелок при наведении*/
+    opacity: 0.6;
+}
+
+#controls label{ /*прозрачность стрелок при отводе курсора*/
+    transition: opacity 0.2s ease-out;
+}
 
