add responsive slider head

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -213,18 +213,18 @@
         }
 
         @media all and (max-width: 1150px) {
-            .bookschoice {
-                height: 910px;
-                float: none;
-                margin: 0 auto;
-            }
+            /*.bookschoice {*/
+                /*height: 910px;*/
+                /*float: none;*/
+                /*margin: 0 auto;*/
+            /*}*/
 
-            .booktext {
-                margin: 0 auto;
-                height: 355px;
-                float: none;
-                width: 500px;
-            }
+            /*.booktext {*/
+                /*margin: 0 auto;*/
+                /*height: 355px;*/
+                /*float: none;*/
+                /*width: 500px;*/
+            /*}*/
 
             .presentation_books {
                 margin-top: 500px;
