--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,7 +4,7 @@
     /*======== menu_list ===========*/
     @media all and (min-width: 1286px) and (max-width: 1350px){
         .menu_list {
-            margin: 3% 1% 0 9%;
+            margin: 3% 1% 0 6%;
         }
     }
     @media all and (min-width: 1190px) and (max-width: 1285px){
@@ -17,7 +17,7 @@
             display: none;
         }
         .switch-blog {
-            padding-left: 50px;
+           margin-left: 50px;
         }
     }
 
@@ -44,7 +44,7 @@
                 width: 40%;
             }
             .switch-blog {
-                padding-left: 13%;
+                margin-left: 13%;
             }
             .single-post-header {
                 margin: 0 27%;
@@ -90,7 +90,7 @@
             width: 40%;
         }
         .switch-blog {
-            padding-left: 13%;
+            margin-left: 13%;
         }
         .single-post-header {
             margin: 0 27%;
@@ -132,6 +132,21 @@
         }
     }
     @media all and (min-width:992px)and (max-width: 1115px) {
+        .single-post-header h1 {
+         font-size: 43px;
+        }
+        .article-text {
+            max-width: 80%;
+            margin: 0 auto;
+        }
+        .single-post-header {
+            width: 60%;
+        }
+        .article-container {
+            width: 80%;
+            margin: 0 auto;
+        }
+
         .single-post-header {
             margin: 0 20%;
         }
@@ -140,8 +155,7 @@
             padding-bottom: 60px;
             padding-top: 50px;
             width: 100%;
-            border-top: 1px solid #bfbfbf;
-            border-bottom: 1px solid #bfbfbf;
+
         }
         .related-item img{
             float: none;
@@ -156,7 +170,7 @@
             width: 18%;
         }
         .switch-blog {
-            padding-left: 50px;
+            margin-left: 6%;
         }
     }
     @media all and (min-width:1116px)and (max-width: 1200px) {
@@ -164,7 +178,7 @@
             margin: 0 8%;
             padding-bottom: 60px;
             padding-top: 50px;
-            width: 100%;
+            width: 85%;
             border-top: 1px solid #bfbfbf;
             border-bottom: 1px solid #bfbfbf;
         }
@@ -180,14 +194,58 @@
             width: 18%;
         }
         .switch-blog {
-            padding-left: 50px;
+            margin-left: 9%;
         }
     }
     /*=========== end article ============*/
 
     /*======= wrap-footer =======*/
-    @media all and (min-width: 1190px) and (max-width: 1285px){
-            
+    @media all and (min-width: 1190px) and (max-width: 1280px){
+        .footer_section_active {
+            padding-right: 9%;
+        }
+        .section_about_header {
+            padding-left: 9%;
+        }
+        .menu_futer {
+            width: 88%;
+
+        }
+        .footer_section_box {
+            margin: 0 9%;
+            width: 53%;
+        }
+        .section_box {
+            margin-left: 10%;
+        }
+        .footer_social {
+            width: 29%;
+        }
+        .switch-blog {
+            margin-left: 63px;
+        }
+    }
+    @media all and (min-width: 992px) and (max-width: 1189px){
+        .footer_section_active {
+            padding-right: 9%;
+        }
+        .section_about_header {
+            padding-left: 9%;
+        }
+        .menu_futer {
+            width: 88%;
+        }
+        .footer_section_box {
+            margin: 0 9%;
+            width: 53%;
+        }
+        .section_box {
+            margin-left: 10%;
+        }
+        .footer_social {
+            width: 29%;
+        }
+
     }
     /*======= end wrap-footer =======*/
 
@@ -469,75 +527,26 @@
             .coupon-code input {
                 width: 120px;
             }
-
-            /*.wrap-footer {*/
-                /*width: 100%;*/
-                /*background-color: #f2fdff;*/
-                /*margin: 0 auto;*/
-            /*}*/
         }
 
-        /* больше чем 768px */
-        /*@media only screen and (min-width: 1280px) {*/
-            /*.menu_list {*/
-                /*margin-left: 7%;*/
+        /*@media all and (min-width:992px)and (max-width: 1115px) {*/
+            /*.related-item img{*/
+                /*float: none;*/
+                /*width: auto;*/
+                /*padding: 0 25px 25px 0;*/
             /*}*/
-
-            /*.wrap-footer {*/
-                /*width: 100%;*/
-                /*background-color: #f2fdff;*/
-                /*margin: 0 auto;*/
+            /*.related-item {*/
+                /*margin: 0 73px;*/
+                /*!* margin-right: 45px; *!*/
+                /*vertical-align: top;*/
+                /*display: inline-block;*/
+                /*width: 18%;*/
+            /*}*/
+            /*.switch-blog {*/
+                /*margin-left: 50px;*/
             /*}*/
         /*}*/
-        @media all and (min-width:992px)and (max-width: 1115px) {
-            .related-item img{
-                float: none;
-                width: auto;
-                padding: 0 25px 25px 0;
-            }
-            .related-item {
-                margin: 0 73px;
-                /* margin-right: 45px; */
-                vertical-align: top;
-                display: inline-block;
-                width: 18%;
-            }
-            .switch-blog {
-                padding-left: 50px;
-            }
-        }
 
-
-
-        /*@media*/
-        /*only screen and (max-width: 760px),*/
-        /*(min-device-width: 768px) and (max-device-width: 1024px)  {*/
-        /*!* Force table to not be like tables anymore *!*/
-        /*!*table, thead, tbody, th, td, tr {*!*/
-        /*!*display: block;*!*/
-        /*!*}*!*/
-        /*!* Hide table headers (but not display: none;, for accessibility) *!*/
-        /*!*.table-header {*!*/
-        /*!*position: absolute;*!*/
-        /*!*top: -9999px;*!*/
-        /*!*left: -9999px;*!*/
-        /*!*}*!*/
-        /*!*td {*!*/
-        /*!*!* Behave  like a "row" *!*!*/
-        /*!*position: relative;*!*/
-        /*!*padding-left: 50%;*!*/
-        /*!*}*!*/
-        /*!*td:before {*!*/
-        /*!*!* Now like a table header *!*!*/
-        /*!*position: absolute;*!*/
-        /*!*!* Top/left values mimic padding *!*!*/
-        /*!*top: 6px;*!*/
-        /*!*left: 6px;*!*/
-        /*!*width: 45%;*!*/
-        /*!*padding-right: 10px;*!*/
-        /*!*white-space: nowrap;*!*/
-        /*!*}*!*/
-        /*}*/
         /* при меньше 500px ) */
         @media only screen and (max-width: 500px) {
 
@@ -552,36 +561,4 @@
         @media only screen and (min-device-width: 400px) {
         }
 
-        /*@media screen and (max-width: 30em) {*/
-            /*div.cs-skin-elastic {*/
-                /*font-size: 1em;*/
-            /*}*/
-        /*}*/
-
-        /*.cs-skin-country > span {*/
-            /*color: #959ba1;*/
-            /*font-family: 'Lato', sans-serif;*/
-            /*font-size: 16px;*/
-            /*background-color: #fff;*/
-            /*z-index: 100;*/
-        /*}*/
-
-        /*.cs-skin-country > span::after {*/
-            /*font-family: 'Lato', sans-serif;*/
-            /*font-size: 16px;*/
-            /*content: '';*/
-            /*background-image: url("../img/shape19.png");*/
-            /*width: 14px;*/
-            /*height: 8px;*/
-            /*-webkit-backface-visibility: hidden;*/
-            /*backface-visibility: hidden;*/
-        /*}*/
-
-        /*.cs-skin-country .cs-options {*/
-            /*overflow: visible;*/
-            /*background: transparent;*/
-            /*opacity: 1;*/
-            /*visibility: visible;*/
-            /*padding-bottom: 1.25em;*/
-        /*}*/
 
